# graphics_school_leaning

./: .gitignore  README.txt  student_report_template.docx
hw1/: README.txt
hw1/docs/deliverables/: student_report.docx
hw1/docs/reports/: benchmark_data.md  code_explanation.md  report_main.md  report_patch_notes.md
hw1/docs/requirements/: dig_experiment_requirements.md
hw1/scripts/: auto_bmp_benchmark.py  generate_report_images.py
hw1/src/: bmp_image_io.cpp
hw2/sub1/: README.md
hw2/sub1/docs/reports/: benchmark_data.md  report_main.md
hw2/sub1/scripts/: auto_bmp_benchmark.py  generate_report_images.py
hw2/sub1/src/: bmp_rotate.cpp
hw2/sub2/: README.md
hw2/sub2/docs/reports/: benchmark_data.md  report_main.md
hw2/sub2/scripts/: auto_bmp_benchmark.py  generate_report_images.py
hw2/sub2/src/: bmp_watermark.cpp
hw3/sub1/: README.md
hw3/sub1/docs/reports/: benchmark_data.md  report_main.md
hw3/sub1/scripts/: auto_bmp_benchmark.py  generate_report_images.py
hw3/sub1/src/: bmp_enhance.cpp
hw3/sub2/: README.md
hw3/sub2/docs/reports/: benchmark_data.md  report_main.md
hw3/sub2/scripts/: auto_bmp_benchmark.py  generate_report_images.py
hw3/sub2/src/: bmp_meanfilter.cpp
practice/: CMakeLists.txt  README.md
practice/outputs/: distortion_preset_0.ppm  distortion_preset_1.ppm  distortion_preset_2.ppm
practice/scripts/: auto_test.py  ppm_to_png_compare.py
practice/src/: main.cpp
